# smphys

./: LICENSE  README.md  pyproject.toml
src/: dataset.py  eval.py  train.py
